[gd_scene load_steps=3 format=3 uid="uid://nqgy8o5o58q7"]

[ext_resource type="Texture2D" uid="uid://ckgj5dlehpkd3" path="res://fp19.png" id="1_46t1b"]
[ext_resource type="Script" path="res://patience_animation.gd" id="1_q8odm"]

[node name="Sprite2D" type="Sprite2D"]
script = ExtResource("1_q8odm")

[node name="Fp19" type="Sprite2D" parent="."]
position = Vector2(210, 398)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_46t1b")
hframes = 5
vframes = 2
region_enabled = true
region_rect = Rect2(19.2394, 56.7361, 726.194, 349.92)

[node name="PatienceTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="PatienceTimer" to="." method="_on_patience_timer_timeout"]
